添加環境變數ALLO_ORIGIN(應用於heroku)

--- a/app.json
+++ b/app.json
@@ -31,6 +31,9 @@
         },
         "YOUTUBE_KEY": {
             "required": false
+        },
+        "ALLOW_ORIGIN": {
+            "required": false
         }
     }
 }
